release 1.3 (05/06-2010)
- Fixed issue 521
  https://jersey.dev.java.net/issues/show_bug.cgi?id=520
  Support matching when quality of source, qs, values are less than 1.
- Fixed issue 520
  https://jersey.dev.java.net/issues/show_bug.cgi?id=520
  When Guice support is configured enable Guice injection of resource
  or provider classes that have fields or methods annotated with @Inject
  but have no constructor annotated with @Inject. In this case Jersey
  instiaties and manages and lets Guice inject.
- Fixed issue 449
  https://jersey.dev.java.net/issues/show_bug.cgi?id=449
  When a message body reader or writer cannot be found for a media type
  and Java type log all readers/writers that are compatible with that
  media type.

release 1.2 (04-2010)
- Fixed issue 516
  https://jersey.dev.java.net/issues/show_bug.cgi?id=516
  Changed resolving algorithm for finding a CDI Bean from a Class such
  that inheritence hierarchies are supported.
  BeanManager.resolve does not resolve a set of Bean to one Bean if all
  members extend from a common concrete case class.
- Fixed issue 507
  https://jersey.dev.java.net/issues/show_bug.cgi?id=507
  Support DELETE with request entities for the Apache HTTP client.
- Fixed issue 505
  https://jersey.dev.java.net/issues/show_bug.cgi?id=505
  Fixed error in the multipart message body writer when the
  Content-Type header value is explicitly set and the value is a string.
- Fixed issue 504
  https://jersey.dev.java.net/issues/show_bug.cgi?id=504
  Upgrade Simple HTTP server to 4.1.20.
- Fixed issue 484
  https://jersey.dev.java.net/issues/show_bug.cgi?id=484
  Change the Guice dependency to depend on Guice from the maven central
  repository rather than GuiceyFruit.
- Added com.sun.jersey.api.JResponse, which is a type safe alternative to
  javax.ws.rs.core.Response that preserves the type information of response
  entity thus it is not necessary to utilize javax.ws.rs.core.GenericEntity.